# call-automation-multi-agent

./: .gitignore  README.md
infra/: aca.tf  acr.tf  deploy.sh  deployment.md  iam.tf  main.tf  outputs.tf  search.tf  storage.tf  terraform.tfvars.example  variables.tf
mcp/: .env.example  Dockerfile  README.md  agent.py  deploy.ps1  deploy.sh  pyproject.toml  server.py  transcription.py
tools/SR70-view/: Ciselnik.xlsx  README.md  index.html  package-lock.json  package.json
tools/SR70-view/public/data/: stations.json
tools/SR70-view/scripts/: extract_stations.py
tools/SR70-view/src/: main.js  styles.css
tools/aisearch_ingestion/: .env.example  README.md  create_index.py  ingest.py  input_test.csv  input_test2.csv  pyproject.toml
tools/transcribe-batch/: .env.example  README.md  plan.md  pyproject.toml  transcribe_file_from_storage.py  transcribe_folder.py
